@@ -5437,7 +5437,7 @@
   /* Zero-extend return register to DImode for zero-extended addresses.  */
   if (mode != <MODE>mode)
     emit_insn (gen_zero_extendsidi2
-    	       (operands[0], gen_lowpart ((mode), operands[0])));
+    	       (operands[0], gen_lowpart (mode, operands[0])));
 
   DONE;
 }
